# scikit-fuzzy-c-means

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  run.py
docs/requirements/: dev.txt
docs/source/: algorithm.rst  conf.py  fuzzy_c_means.rst  fuzzy_logic.rst  index.rst  installation.rst  notes.rst  references.rst  usage.rst
fuzzy_cmeans/: __init__.py  fuzzy_cmeans.py
requirements/: dev.txt
tests/: test_fuzzy_cmeans.py
