[tool.poetry]
name = "scikit-fuzzy-c-means"
version = "0.1.0"
description = "fuzzy c-means machine learnnig algorithm in scikit-learn style code"
authors = ["Sepehr Akbarzadeh <sa.goldeneagle@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
commitizen = "^3.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
tox = "^4.23.2"
pylint = "^3.3.1"
docformatter = "^1.7.5"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
sphinx-rtd-theme = "^3.0.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
